force-app/main/default/objects/ScrapDecadesLimit__c/ScrapDecadesLimit__c.object-meta.xml
<CustomObject>
    <label>Декадні ліміти брухту</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScrapDecadesLimit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>