force-app/main/default/objects/ScrapDecadesLimit__c/fields/DateStart__c.field-meta.xml
<CustomField>
    <fullName>DateStart__c</fullName>
    <label>DateStart</label>
    <type>Date</type>
</CustomField>