force-app/main/default/objects/ScrapDecadesLimit__c/fields/DayLimit__c.field-meta.xml
<CustomField>
    <fullName>DayLimit__c</fullName>
    <label>Ліміт, т.</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>