force-app/main/default/objects/ScrapDecadesLimit__c/fields/DayLookup__c.field-meta.xml
<CustomField>
    <fullName>DayLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>День плану</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapDecadesLimit_D</relationshipName>
    <type>Lookup</type>
</CustomField>