force-app/main/default/objects/ScrapDecadesLimit__c/fields/Decade__c.field-meta.xml
<CustomField>
    <fullName>Decade__c</fullName>
    <label>Декада</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>І декада</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>ІІ декада</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ІІІ декада</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>