force-app/main/default/objects/ScrapDecadesLimit__c/fields/DecadeGroup__c.field-meta.xml
<CustomField>
    <fullName>DecadeGroup__c</fullName>
    <label>DecadeGroup</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapDecadesLimit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>