force-app/main/default/objects/ScrapDecadesLimit__c/fields/DecadeLimit__c.field-meta.xml
<CustomField>
    <fullName>DecadeLimit__c</fullName>
    <label>Декадний ліміт</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>