force-app/main/default/objects/ScrapDecadesLimit__c/fields/KeyDay__c.field-meta.xml
<CustomField>
    <fullName>KeyDay__c</fullName>
    <label>KeyDay</label>
    <length>80</length>
    <type>Text</type>
</CustomField>