force-app/main/default/objects/ScrapDecadesLimit__c/fields/LimitDate__c.field-meta.xml
<CustomField>
    <fullName>LimitDate__c</fullName>
    <label>Дата</label>
    <type>Date</type>
</CustomField>