force-app/main/default/objects/ScrapDecadesLimit__c/fields/MonthGroup__c.field-meta.xml
<CustomField>
    <fullName>MonthGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MonthGroup</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapDecadesLimit_M</relationshipName>
    <type>Lookup</type>
</CustomField>