force-app/main/default/objects/ScrapDecadesLimit__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>ScrapDecadesLimit__c</referenceTo>
    <relationshipName>ScrapDecadesLimit_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>