force-app/main/default/objects/ScrapDecadesLimit__c/fields/ScrapType__c.field-meta.xml
<CustomField>
    <fullName>ScrapType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Тип брухту</label>
    <referenceTo>ScrapType__c</referenceTo>
    <relationshipName>ScrapDecadesLimit_ScrapType</relationshipName>
    <type>Lookup</type>
</CustomField>