force-app/main/default/objects/ScrapDecadesLimit__c/recordTypes/Decade.recordType-meta.xml
<RecordType>
    <fullName>Decade</fullName>
    <active>true</active>
    <label>Decade</label>
</RecordType>